# ES-SDK

./: CMakeLists.txt  README.md
6.0.4.sdk/espf/config/datacache/: CMakeLists.txt  DataCache.fidl  DataCacheTypes.fidl  datacache.c  datacache.h  datacache_cfg.c  datacache_cfg.h  datacache_io.fidl  deploy_dc.fdepl  deploy_dc_io.fdepl
6.0.4.sdk/espf/config/nvm/: CMakeLists.txt
6.0.4.sdk/espf/config/nvm/fp/config/: nvm_bp.fdepl  nvm_bp.fidl
6.0.4.sdk/espf/config/nvm/inc/: nvm_block_ids.h  nvm_cfg.h  nvm_cfg_defines.h  nvm_data_types.h
6.0.4.sdk/espf/config/nvm/src/: nvm_cfg.c
6.0.4.sdk/espf/core/lib/FP_common/: CMakeLists.txt  FP_BaseProtocolTypes.h  FP_Helpers.c  FP_Helpers.h  FP_ProtocolServerCommon.c  FP_ProtocolServerCommon.h
6.0.4.sdk/espf/core/lib/assertions/: CMakeLists.txt
6.0.4.sdk/espf/core/lib/assertions/inc/: assertions.h
6.0.4.sdk/espf/core/lib/assertions/src/: assertions.c
6.0.4.sdk/espf/core/lib/cbuf/: CMakeLists.txt
6.0.4.sdk/espf/core/lib/cbuf/inc/: cbuf.h
6.0.4.sdk/espf/core/lib/cbuf/src/: cbuf.c
6.0.4.sdk/espf/core/lib/cobs_inplace/: CMakeLists.txt
6.0.4.sdk/espf/core/lib/cobs_inplace/inc/: cobs_inplace.h
6.0.4.sdk/espf/core/lib/cobs_inplace/src/: cobs_inplace.c
6.0.4.sdk/espf/core/lib/crc/: CMakeLists.txt
6.0.4.sdk/espf/core/lib/crc/inc/: MACCRC32_Classic_Impl.h  crc16-ccitt.h  es_crc32.h  es_crc8.h
6.0.4.sdk/espf/core/lib/crc/src/: MACCRC32_Classic_Impl.c  crc16-ccitt.c  es_crc32.c  es_crc8.c
6.0.4.sdk/espf/core/lib/irq/: CMakeLists.txt
6.0.4.sdk/espf/core/lib/irq/inc/: irq.h
6.0.4.sdk/espf/core/lib/irq/src/: irq.c
6.0.4.sdk/espf/core/lib/libcbuff/: CMakeLists.txt  deftypes.h  libqueue.c  libqueue.h
6.0.4.sdk/espf/core/lib/libcobs/: CMakeLists.txt  README.md
6.0.4.sdk/espf/core/lib/libcobs/inc/: cobs.h
6.0.4.sdk/espf/core/lib/libcobs/src/: cobs.c  cobs_test.c
6.0.4.sdk/espf/core/lib/libcsq_algo/: CMakeLists.txt
6.0.4.sdk/espf/core/lib/libcsq_algo/inc/: csq_algo.h
6.0.4.sdk/espf/core/lib/libcsq_algo/src/: csq_algo.c
6.0.4.sdk/espf/core/lib/libdatetime/: CMakeLists.txt
6.0.4.sdk/espf/core/lib/libdatetime/inc/: datetime.h
6.0.4.sdk/espf/core/lib/libdatetime/src/: datetime.c
6.0.4.sdk/espf/core/lib/libfile_stack/: CMakeLists.txt
6.0.4.sdk/espf/core/lib/libfile_stack/inc/: libfile_stack.h
6.0.4.sdk/espf/core/lib/libfile_stack/src/: libfile_stack.c
6.0.4.sdk/espf/core/lib/libsgp4/: CMakeLists.txt  README.md
6.0.4.sdk/espf/core/lib/libsgp4/config/: sgp4_config.h
6.0.4.sdk/espf/core/lib/libsgp4/include/: sgp4_propagator.h
6.0.4.sdk/espf/core/lib/libsgp4/source/: sgp4_other.c  sgp4_pc_test.c  sgp4_propagator.c  sgp4_two_line_element.c
6.0.4.sdk/espf/core/lib/libtimer/: CMakeLists.txt  README.md
6.0.4.sdk/espf/core/lib/libtimer/inc/: timer.h  timer_cfg.h.template
6.0.4.sdk/espf/core/lib/libtimer/src/: timer.c
6.0.4.sdk/espf/core/lib/sys_printf/: CMakeLists.txt
6.0.4.sdk/espf/core/lib/sys_printf/inc/: sys_printf.h
6.0.4.sdk/espf/core/lib/sys_printf/src/: sys_printf.c
6.0.4.sdk/espf/core/lib/trace/: CMakeLists.txt
6.0.4.sdk/espf/core/lib/trace/inc/: trace.h  trace_defs.h  trace_types.h
6.0.4.sdk/espf/core/lib/trace/src/: trace.c
6.0.4.sdk/espf/core/middlewares/ESPLATFORM_NETWORK_STACK/: CMakeLists.txt  README.txt
6.0.4.sdk/espf/core/middlewares/ESPLATFORM_NETWORK_STACK/ES_CP/: ESCCP_ModDrv.h  ESCP_ModDrv.h  ES_CP_CCP_Layer.h
6.0.4.sdk/espf/core/middlewares/ESPLATFORM_NETWORK_STACK/ES_FW_UPD/: App_UpdateHeader.h  ESFWUPD_ModDrv.h  ES_FileTransport_Layer.h
6.0.4.sdk/espf/core/middlewares/ESPLATFORM_NETWORK_STACK/ES_FW_UPD_CB_INTF/: ESFWUPD_ModDrv.h
6.0.4.sdk/espf/core/middlewares/ESPLATFORM_NETWORK_STACK/ES_HS/: ESHS_HandShake.h  ESHS_ModDrv.h
6.0.4.sdk/espf/core/middlewares/ESPLATFORM_NETWORK_STACK/ES_SAT_AIRMAC/: ES_SAT_AIRMAC.h
6.0.4.sdk/espf/core/middlewares/ESPLATFORM_NETWORK_STACK/ES_SAT_API/: Readme.txt
6.0.4.sdk/espf/core/middlewares/ESPLATFORM_NETWORK_STACK/ES_SAT_MAC/: ES_SAT_MAC.h  ES_SAT_MAC_Context.h  ES_SAT_MAC_Protocols.h
6.0.4.sdk/espf/core/middlewares/ESPLATFORM_NETWORK_STACK/ES_SAT_MACGW/: ES_SAT_MACGW.h
6.0.4.sdk/espf/core/middlewares/ESPLATFORM_NETWORK_STACK/ES_TL_LAYER/: ESTL_Bridge_Drv.h  ESTL_Drv.h  ESTL_Receiver.h  ESTL_Sender.h  ESTL_Utils.h  ES_TL_Layer.h
6.0.4.sdk/espf/core/services/actuator_control_service/: CMakeLists.txt  README.md
6.0.4.sdk/espf/core/services/actuator_control_service/config/: OBC_ACTUATOR_CONTROL_SERVICE.fdepl
6.0.4.sdk/espf/core/services/actuator_control_service/inc/: actuator_control_service.h
6.0.4.sdk/espf/core/services/actuator_control_service/src/: actuator_control_service.c
6.0.4.sdk/espf/core/services/beacons/: CMakeLists.txt
6.0.4.sdk/espf/core/services/beacons/config/: Beacons.fdepl
6.0.4.sdk/espf/core/services/beacons/inc/: beacon_cfg_types.h  beacon_types.h  beacons.h  beacons_sink_uhf.h  if_beacons_sink.h
6.0.4.sdk/espf/core/services/beacons/scripts/: beacon_sniffer.7z  beacon_sniffer.py  mac_dump_mode.bat  setcom.bat
6.0.4.sdk/espf/core/services/beacons/src/: beacons.c  beacons_sink_uhf.c  beacons_sm.puml  beacons_sm.yaml  beacons_sm_config.c  beacons_sm_config_user.c  beacons_sm_config_user.h  beacons_sm_user.h  hsmgen.bat
6.0.4.sdk/espf/core/services/crypto/: CMakeLists.txt
6.0.4.sdk/espf/core/services/crypto/inc/: crypto.h
6.0.4.sdk/espf/core/services/crypto/src/: crypto.c
6.0.4.sdk/espf/core/services/csp/: CMakeLists.txt
6.0.4.sdk/espf/core/services/csp/inc/: csp_service.h
6.0.4.sdk/espf/core/services/csp/src/: csp_service.c
6.0.4.sdk/espf/core/services/eps_ctrl/: CMakeLists.txt
6.0.4.sdk/espf/core/services/eps_ctrl/inc/: eps_ctrl.h  eps_ctrl_ct.h
6.0.4.sdk/espf/core/services/eps_ctrl/src/: eps_control_sm.puml  (+9 more)
6.0.4.sdk/espf/core/services/es_adcs/: CMakeLists.txt  README.md
6.0.4.sdk/espf/core/services/es_coordsys/: CMakeLists.txt  README.md
6.0.4.sdk/espf/core/services/espsi/: CMakeLists.txt
6.0.4.sdk/espf/core/services/fault_persistor/: CMakeLists.txt
6.0.4.sdk/espf/core/services/netw/: CMakeLists.txt
6.0.4.sdk/espf/core/services/nvm/: CMakeLists.txt
(+7004 files in other folders)
